chore: fix typos

--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -6,9 +6,9 @@ title: Overview and Concept
 
 KlickerUZH integrates a comprehensive gamification framework throughout the application, designed to enhance student motivation and engagement. Participants can create personalized avatars and collect points for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different leaderboards, fostering a sense of achievement and driving students to improve their performance.
 
-The gamification system extends beyond individual competition and also promotes collaboration. Students can form form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and achievements are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
+The gamification system extends beyond individual competition and also promotes collaboration. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and achievements are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
 
-KlickerUZH's gamification features are designed to provide immediate feedback and recognition, helping students track their progress over time and stay motivated. On top of course specific points, students also collect experience points that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
+KlickerUZH's gamification features are designed to provide immediate feedback and recognition, helping students track their progress over time and stay motivated. On top of course-specific points, students also collect experience points that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
 
 For a more detailed overview of the gamification features, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
 
