--- a/apps/docs/docs/getting_started/core_concepts.mdx
+++ b/apps/docs/docs/getting_started/core_concepts.mdx
@@ -20,23 +20,23 @@ title: Core Concepts
 
 To effectively understand and utilize KlickerUZH, it is important to grasp the four key concepts that form the foundation of the application. These concepts are as follows:
 
-1. **Questions**: Questions are the primary building block of the application. All of the activities provided by KlickerUZH utilize questions that are managed in the question pool. Lecturers can pose questions to the participants and participants can respond using their devices to practice content.
+1. **Elements**: Elements - like single choice questions or flashcards - are the primary building block of the application. All of the activities provided by KlickerUZH utilize elements that are managed in the element library. Lecturers can pose elements to the participants and participants can respond using their devices to practice content.
 
 2. **Learning Activities**: Lecturers can choose between five different types of activities that suit specific educational objectives and adapt to various teaching methods during live lectures (synchronous learning) or outside of the traditional lecture frame (asynchronous learning). The activities are: Live Quiz, Live Q&A, Microlearning, Practice Quiz and Group Activity.
 
 3. **Courses**: Courses help to implement KlickerUZH Learning Activities into a lecture structure, enabling lecturers to manage different activities and challenges effectively throughout a semester or over a certain period of time.
 
-4. **Gamification**: Gamification of a course, if enabled, incorporates elements like points, achievements, and leaderboards within all learning activities to create a playful challenge and enhance motivation and fun in education. Further gamified elements are course-independent and allow participants to create an avatar and gather experience points throughout all their courses.
+4. **Gamification**: Gamification of a course, if enabled, incorporates game elements like points, achievements, and leaderboards within all learning activities to create a playful challenge and enhance motivation and fun in education. Further gamified elements are course-independent and allow participants to create an avatar and gather experience points throughout all their courses.
 
-By understanding these four key concepts - Questions, Learning Activities, Courses, and Gamification - you will gain a solid base for utilizing KlickerUZH effectively.
+By understanding these four key concepts - Elements, Learning Activities, Courses, and Gamification - you will gain a solid base for utilizing KlickerUZH effectively.
 
-## Questions
+## Elements
 
-Questions are the foundational component of KlickerUZH as they form the base for student interaction. Lecturers implement questions that they want to ask their students live in a lecture or as a repetition later on. Students/Participants can respond to questions using their personal devices, such as mobile phones, tablets or laptops. There are five question types available: Single Choice (SC), Multiple Choice (MC), Kprim (KPRIM), Free Text (FT), and Numerical Response (NR).
+Elements are the foundational component of KlickerUZH as they form the base for student interaction. Lecturers implement elements that they want to present to their students live in a lecture or as a repetition later on. Students/Participants can interact with elements using their personal devices, such as mobile phones, tablets or laptops. There are several element types available: Single Choice (SC), Multiple Choice (MC), Kprim (KPRIM), Free Text (FT), Numerical Response (NR), Flashcards, and Content Elements.
 
-It is recommended to align the choice of question types with specific learning goals. For example, if you want to check whether the students have understood the previously learned knowledge, single-choice or Kprim questions with a clear answer are suitable (Example: What is the definition of the Sharpe ratio?). To activate students’ engagement, questions can be asked without a clear answer. This makes students think about the discussed topic being covered and gets them directly involved (Example: Where will the SMI be at the end of 2025?). For more didactical information please consult the [use cases](/use_cases) or [UZH Teaching Tools](https://teachingtools.uzh.ch/).
+It is recommended to align the choice of element types with specific learning goals. For example, if you want to check whether the students have understood the previously learned knowledge, single-choice or Kprime elements with a clear answer are suitable (Example: What is the definition of the Sharpe ratio?). To activate students' engagement, elements can be presented without a clear answer. This makes students think about the discussed topic being covered and gets them directly involved (Example: Where will the SMI be at the end of 2025?). For more didactical information please consult the [use cases](/use_cases) or [UZH Teaching Tools](https://teachingtools.uzh.ch/).
 
-Questions can be grouped and/or stacked for sequential presentation. Sample solutions and explanations can be provided for all question types, while answer-specific feedback is currently limited to choice-based questions. Questions can be graded automatically and yield points for successful completion. Customizable weighting (e.g., to separate easy and difficult questions) can be applied through a multiplier (x1, x2, x3, x4) that will impact the amount of points accumulated.
+Elements can be grouped and/or stacked for sequential presentation. Sample solutions and explanations can be provided for the different question element types, while answer-specific feedback is currently limited to choice-based elements. Elements with a sample solution can be graded automatically and yield points for successful completion. Customizable weighting (e.g., to separate easy and difficult elements) can be applied through a multiplier (x1, x2, x3, x4) that will impact the amount of points accumulated.
 
 ## Learning Activities
 
@@ -52,15 +52,15 @@ Live Quizzes in KlickerUZH can be coupled with a Live Q&A that enables students 
 
 ### Microlearning
 
-Microlearning is a asynchronous learning activity corresponding to a short learning unit with a limited number of questions. Microlearning questions can be published for a limited time and at fixed points during the week, such as one day after the lecture. The purpose of microlearning is to counteract the forgetting curve, according to which our ability to retain information rapidly declines after twenty minutes. With targeted questions, students can test themselves, refresh and consolidate their knowledge - regardless of time and place. This direct and simple access motivates students to integrate learning regularly into their everyday lives.
+Microlearning is a asynchronous learning activity corresponding to a short learning unit with a limited number of elements. Microlearning elements can be published for a limited time and at fixed points during the week, such as one day after the lecture. The purpose of microlearning is to counteract the forgetting curve, according to which our ability to retain information rapidly declines after twenty minutes. With targeted questions, students can test themselves, refresh and consolidate their knowledge - regardless of time and place. This direct and simple access motivates students to integrate learning regularly into their everyday lives.
 
 ### Practice Quiz
 
-The practice quiz activity allows for asynchronous learning with longer question sets that specifically target modules or topics and that can be embedded within Learning Management Systems (LMS) like OLAT. These learning activities have no restrictions on when or how often they can be completed, making them a valuable resource for students to monitor their learning progress. Furthermore, the questions within each set can be shown in sequence, shuffled, or ordered based on the date of the last response, providing varied experiences for students. When using gamification, the time frame in which points can be collected from responding to the questions can be customized to, e.g., once a week or day.
+The practice quiz activity allows for asynchronous learning with longer sets of elements that specifically target modules or topics and that can be embedded within Learning Management Systems (LMS) like OLAT. These learning activities have no restrictions on when or how often they can be completed, making them a valuable resource for students to monitor their learning progress. Furthermore, the elements within each set can be shown in sequence, shuffled, or ordered based on the date of the last response, providing varied experiences for students. When using gamification, the time frame in which points can be collected from responding to the elements can be customized to, e.g., once a week or day.
 
 ### Group Activity
 
-Group Activities involve asynchronous learning activities consisting of a set of questions and clues that encourage collaboration and the practical application of theoretical knowledge within a group. Teamwork is encouraged through the distribution of information, where each team member receives specific details required to solve the task. This setup promotes collaboration, information sharing, and effective communication among group members, resulting in enhanced engagement and learning outcomes.
+Group Activities involve asynchronous learning activities consisting of a set of elements and clues that encourage collaboration and the practical application of theoretical knowledge within a group. Teamwork is encouraged through the distribution of information, where each team member receives specific details required to solve the task. This setup promotes collaboration, information sharing, and effective communication among group members, resulting in enhanced engagement and learning outcomes.
 
 ## Courses
 
