--- a/apps/docs/docs/tutorials/element_management.mdx
+++ b/apps/docs/docs/tutorials/element_management.mdx
@@ -33,15 +33,31 @@ Elements serve as the fundamental building blocks of KlickerUZH. The element lib
   title="KlickerUZH - Element Creation"
 ></iframe>
 
-1. The element title is visible to participants and should offer an idea about the subject of the element.
-2. Elements can be weighted differently using a multiplier. A multiplier awards correct answers with either x1, x2, x3, or x4 points, if the element is applied within a gamified context.
-3. A generic explanation can optionally be entered to be displayed to participants after they interact with the element, regardless of their response. Generic explanations can be used for all element types, however they are only displayed immediately after interacting with elements in Microlearning or Practice Quiz learning activities. In live quizzes, generic explanations are not displayed as the intention is for the content to be discussed in class. Only the students' points are transferred to leaderboard, when gamification is enabled.
-4. Sample solutions can optionally be provided for question-type elements. Inputting sample solutions is mandatory for automatic grading of choice-based question types. Providing sample solutions for free-text questions is only recommended when specific words or terms are being queried. To account for capitalization or different spellings, multiple sample solution options can be entered.
-5. Answer-feedbacks can be entered for choice-based question types (SC/MC/Kprim). The difference between answer-feedbacks and a generic explanation is that with answer-feedbacks, each answer option can receive specific feedback to enhance the learning effect.
-6. For Numerical Questions, hints regarding the range of the number can be provided under Options. Additionally, the precision option allows specifying the desired number of decimal places, including whether rounding should be applied.
-7. For Flashcards, both sides of the card can be edited, and rich text formatting can be applied.
-8. Content Elements allow for the creation of informational content without requiring participant interaction.
-9. The preview section demonstrates how the elements will appear to participants. Choice-based questions can be displayed either in a list format or as a grid.
+When creating elements, consider the following:
+
+- **Element Title**: Is visible to participants and provide an idea about the element's subject.
+- **Weighting**: Elements can be weighted using multipliers (x1, x2, x3, or x4) to award points in gamified contexts.
+- **Generic Explanation**:
+  - Optional for all element types
+  - Displayed to participants after interaction, regardless of response
+  - Shown immediately in Microlearning or Practice Quiz activities
+  - Not displayed in live quizzes (intended for class discussion)
+- **Sample Solutions**:
+  - Optionally available for question-type elements
+  - Mandatory for automatic grading of choice-based or numerical questions
+  - Recommended for free-text questions only when querying specific words/terms
+  - Multiple options can be entered to account for capitalization or spelling variations
+- **Answer Feedbacks**:
+  - Optionally available for choice-based question types (SC/MC/Kprim)
+  - Allows specific feedback for each answer option, enhancing learning effect
+- **Input Restrictions**:
+  - Available for numerical and free-text questions (NR and FT)
+  - Can restrict the range of numbers that can be entered
+  - Can restrict the length of free-text responses
+  - Precision option specifies desired decimal places and rounding
+- **Preview**:
+  - Demonstrates how elements will appear to participants
+  - Choice-based questions can be displayed in list or grid format
 
 ## How can I manage created elements (e.g., edit, search, sort)?
 
@@ -61,10 +77,21 @@ Elements serve as the fundamental building blocks of KlickerUZH. The element lib
   title="KlickerUZH - Element Management"
 ></iframe>
 
-Since elements (i.e., questions, flashcards, and content elements) can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
+Elements (questions, flashcards, and content elements) are the building blocks of learning activities in KlickerUZH. They can be reused across various activities, making efficient management crucial. Here's how you can organize and manipulate your elements:
 
-1. Elements can be grouped based on tags, and it is possible to search for element titles in the search field.
-2. Elements can be listed by creation date or by title (alphabetically, from a -> z or from z -> a).
-3. Elements can be edited, duplicated (and subsequently edited), and deleted. However, any edits made to elements will not affect their status in ongoing implementations within various learning activities (unless the corresponding option is explicitly activated in the edit dialog). Deleted elements cannot be restored, but they will persist within existing sessions.
-4. To keep the element pool organized, there is the option to archive elements and retrieve them from the archive at a later time.
-5. Elements are the basic building blocks of all learning activities. Most elements can be used in any of the activities, but some restrictions apply. For more details about embedding elements into different learning activities, please refer to the tutorial/workflow section Learning Activities.
+**Organizing Elements**
+
+- **Grouping**: Use tags to categorize elements
+- **Searching**: Find elements by title using the search field
+- **Sorting**: List elements by creation/modification date or alphabetically (A-Z or Z-A)
+- **Archiving**: Keep your element pool tidy by archiving and later retrieving elements
+
+**Manipulating Elements**
+
+- **Edit**: Modify existing elements. Edits to elements do not affect their status in ongoing learning activities unless explicitly activated in the edit dialog.
+- **Duplicate**: Create copies of elements for further editing
+- **Delete**: Remove unwanted elements (note: this action is irreversible)
+
+**Using Elements in Learning Activities**
+
+Most elements can be used in any learning activity, with some restrictions. For detailed information on embedding elements into different activities, refer to the following sections. Remember, elements are persistent within existing sessions, even if deleted from your element pool.
