--- a/apps/docs/docs/tutorials/ppt_integration.mdx
+++ b/apps/docs/docs/tutorials/ppt_integration.mdx
@@ -3,7 +3,7 @@ title: PowerPoint Integration (Live Quiz)
 hide_title: true
 ---
 
-# Integration of Live Quiz Evaluation into PowerPoint
+# Evaluation in PowerPoint
 
 When using KlickerUZH live quizzes, most lecturers want to display the responses received for the posed questions and their evaluation in real-time. While the live quiz evaluation screen offers this functionality, users inside UZH and other universities that have deployed the corresponding Add-In can now directly integrate this live quiz evaluation view into their PowerPoint presentations.
 
