--- a/apps/docs/docs/getting_started/core_concepts.mdx
+++ b/apps/docs/docs/getting_started/core_concepts.mdx
@@ -70,6 +70,10 @@ Courses in KlickerUZH allows students to join within the KlickerUZH app and subs
 
 ## Gamification
 
+:::info
+For more details on the gamification concept, please refer to the [Gamification](/gamification/overview) section.
+:::
+
 As part of the gamification concept, KlickerUZH includes an optional challenge system in addition to the design of the storyline and visual aspects. Gamification can be utilized either at the course level or by implementing gamification into specific live quizzes.
 
 Gamification at the course level enable participants to earn points for completing learning activities associated with a course. Therefore, students receive points when they participate in live quizzes and solve microlearning questions, practice quizzes and group activities. The points earned are shown on a course leaderboard. Within a course, students can also form groups to check how their peers are doing and take part in collaborative group activities.
