--- a/apps/docs/docs/getting_started/migration.mdx
+++ b/apps/docs/docs/getting_started/migration.mdx
@@ -2,6 +2,10 @@
 title: Migration from v2.0
 ---
 
+:::warning
+The migration process is no longer officially supported and will be removed soon.
+:::
+
 This article contains a short description on how to start the migration process from v2.0 to v3.0.
 
 1. Before starting the migration, you need to create an account in the new KlickerUZH v3.0. For this, head to [http://manage.klicker.uzh.ch/login](http://manage.klicker.uzh.ch/login) and use your Edu-ID credentials to log in. If you do not have an Edu-ID account, you can create one [here](https://eduid.ch/web/registration/1/). Creating an Edu-ID account is free of charge and **not** limited to Swiss universities.
