--- a/apps/docs/docs/getting_started/welcome.mdx
+++ b/apps/docs/docs/getting_started/welcome.mdx
@@ -10,7 +10,9 @@ The platform is being developed by the **Teaching Center** of the **Department o
 
 To learn how to use the KlickerUZH efficiently, we recommend you get familiar with the **core concepts** and work through the **tutorials**. These tutorials have been created to guide you through the entire application by means of examples. KlickerUZH also offers a number of **use cases in university teaching** that allow lecturers to achieve different goals depending on their needs. To help you decide which use case best suits your purpose, you will find a selection in the [Use Cases](/use_cases) area of the documentation.
 
-> In case of any questions, please have a look if your problem has already been described in the FAQ. For further support, please feel free to connect with us in our [community](https://www.community.klicker.uzh.ch) or through the other channels as described below.
+:::info
+In case of any questions, please have a look if your problem has already been described in the FAQ. For further support, please feel free to connect with us in our [community](https://www.community.klicker.uzh.ch) or through the other channels as described below.
+:::
 
 ## Official KlickerUZH
 
@@ -24,7 +26,9 @@ The official instance of KlickerUZH (**www.klicker.uzh.ch**) is provided by the 
 
 Instead of using the publicly hosted version of the application (the official "KlickerUZH"), it is also possible to **host an instance on private infrastructure**. This can be useful if an institution prefers to host their questions and results on private infrastructure only (e.g., if the question contents are sensitive, or the votes are confidential).
 
-> **Important:** You are required, as reinforced by the AGPL license, that any extensions of self-hosted instances be provided as open-source as well (as is good open-source spirit).
+:::warning
+**Important:** You are required, as reinforced by the AGPL license, that any extensions of self-hosted instances be provided as open-source as well (as is good open-source spirit).
+:::
 
 To deploy a private KlickerUZH instance, we strongly recommend that you first familiarize yourself with the **architecture of the application** on our GitHub project. Feel free to get in touch in our community if there are any questions or issues regarding deployment.
 
@@ -45,4 +49,6 @@ We offer support for the KlickerUZH on various channels:
 - Github Issues on [uzh-bf/klicker-uzh](https://github.com/uzh-bf/klicker-uzh/discussions)
 - Feature Requests / Bug Reports on our [feedback platform](https://klicker-uzh.feedbear.com)
 
-> **Note:** Please bear in mind that even though we strive for good response time and general support (i.e., best-effort), we do not have a dedicated support team for the project, as we are funded primarily through project-based funding.
+:::info
+Please bear in mind that even though we strive for good response time and general support (i.e., best-effort), we do not have a dedicated support team for the project, as we are funded primarily through project-based funding.
+:::
