--- a/apps/docs/docs/tutorials/element_management.mdx
+++ b/apps/docs/docs/tutorials/element_management.mdx
@@ -8,12 +8,15 @@ title: Element Management
 
 Elements serve as the fundamental building blocks of KlickerUZH. The element library builds the home screen of KlickerUZH, providing a central hub for creating and editing elements. To gain a basic understanding of the role of elements in KlickerUZH, please refer to the Core Concept - Elements and Use case section.
 
-1. There are several different element types:
-    - **Questions**: Single Choice (SC), Multiple Choice (MC), Kprim (KP), Free Text (FT), and Numerical Response (NR)
-    - **Flashcards** (FC)
-    - **Content Elements** (CT)
+There are several different element types:
 
-2. A pedagogical reflection should precede the creation of elements, as different element types may be more appropriate for different learning settings or learning goals. For more pedagogical considerations, refer to use cases or to UZH Teaching Tools: e.g., https://teachingtools.uzh.ch/en/tools/multiple-choice-co-aufgaben-erstellen
+- **Questions**: Single Choice (SC), Multiple Choice (MC), Kprim (KP), Free Text (FT), and Numerical Response (NR)
+- **Flashcards** (FC)
+- **Content Elements** (CT)
+
+:::info
+A pedagogical reflection should precede the creation of elements, as different element types may be more appropriate for different learning settings or learning goals. For more pedagogical considerations, refer to use cases or to UZH Teaching Tools: e.g., https://teachingtools.uzh.ch/en/tools/multiple-choice-co-aufgaben-erstellen
+:::
 
 ## How can I create an element?
 
@@ -92,6 +95,6 @@ Elements (questions, flashcards, and content elements) are the building blocks o
 - **Duplicate**: Create copies of elements for further editing
 - **Delete**: Remove unwanted elements (note: this action is irreversible)
 
-**Using Elements in Learning Activities**
-
+:::info
 Most elements can be used in any learning activity, with some restrictions. For detailed information on embedding elements into different activities, refer to the following sections. Remember, elements are persistent within existing sessions, even if deleted from your element pool.
+:::
