--- a/apps/docs/docs/tutorials/supported_element_types.mdx
+++ b/apps/docs/docs/tutorials/supported_element_types.mdx
@@ -3,7 +3,10 @@ title: Supported Element Types
 ---
 
 Based on learning settings or learning goals, you can choose from seven different element types in KlickerUZH (i.e., five types of questions, content elements, and flashcards). Questions support the definition of a sample solution, which is used for automated grading processes in asynchronous KlickerUZH activities, such as practice quizzes and microlearnings. To use a question in a live quiz setting, you do not have to provide information on the answer correctness.
+
+:::info
 For a more detailed description on how to create the listed elements in the KlickerUZH lecturer interface, please refer to the documentation on [element management](/tutorials/element_management/) or check out the tooltips for the corresponding fields in the editor directly.
+:::
 
 ## Content Element (CT)
 
