add student paragraph on random groups

--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -10,7 +10,9 @@ The gamification system extends beyond individual competition and also promotes 
 
 KlickerUZH's gamification features are designed to provide immediate feedback and recognition, helping students track their progress over time and stay motivated. On top of course-specific points, students also collect experience points that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
 
+:::info
 For a more detailed overview of the gamification features, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
+:::
 
 ## Gamified Activities and Competition
 
