--- a/apps/docs/docs/student_tutorials/groups_activities.mdx
+++ b/apps/docs/docs/student_tutorials/groups_activities.mdx
@@ -8,6 +8,8 @@ While students compete in leaderboards against each other when collecting points
 
 Through a tab on the course page, students can either create a new group or join an existing one, using the provided PIN. Groups can be formed until a pre-defined deadline, specified by the lecturer. These groups can solve group activities together, which are created by the lecturer and consist of a set of questions, explanation texts and hints, distributed across all participants, promoting collaboration. Group activities are only available in a limited time window and can only be solved once. Points are awarded for answering questions correctly.
 
+For larger courses or when students may not know their peers, KlickerUZH offers a randomized group creation feature. Students can opt to be randomly assigned to a group by selecting this option during the group formation process. The system automatically creates new groups each day, finalizing the process at the group creation deadline set by the lecturer. This ensures fair and efficient group formation, especially useful in courses with many participants. The lecturer determines the preferred group size, and KlickerUZH strives to adhere to this size as much as possible when creating random groups. Students who find themselves alone in a group or remain unassigned at the deadline are automatically redistributed to ensure balanced group sizes.
+
 ![Group Activity in Mobile View](/img_v3/10_group_overview.png)
 
 ## Solve a Group Activity
