--- a/apps/docs/docs/student_tutorials/groups_activities.mdx
+++ b/apps/docs/docs/student_tutorials/groups_activities.mdx
@@ -4,11 +4,11 @@ title: Groups and Group Activities
 
 ## Creating / Joining Groups and Group Activities
 
-While students compete in leaderboards against each other when collecting points from live quizzes, practice quizzes and microlearnings, KlickerUZH also covers efforts to promote collaboration and teamwork. This section describes the student view of groups and group activities. To create them from the lecturer view, check out the [corresponding section](/tutorials/group_activity/).
+While students compete in leaderboards against each other when collecting points from **live quizzes**, **practice quizzes**, and **microlearnings**, KlickerUZH also covers efforts to promote **collaboration** and **teamwork**. This section describes the student view of **groups** and **group activities**. To create them from the lecturer view, check out the [corresponding section](/tutorials/group_activity/).
 
-Through a tab on the course page, students can either create a new group or join an existing one, using the provided PIN. Groups can be formed until a pre-defined deadline, specified by the lecturer. These groups can solve group activities together, which are created by the lecturer and consist of a set of questions, explanation texts and hints, distributed across all participants, promoting collaboration. Group activities are only available in a limited time window and can only be solved once. Points are awarded for answering questions correctly.
+Through a tab on the course page, students can either **create a new group** or **join an existing one**, using the provided **PIN**. Groups can be formed until a **pre-defined deadline**, specified by the lecturer. These groups can solve **group activities** together, which are created by the lecturer and consist of a set of **questions**, **explanation texts**, and **hints**, distributed across all participants, promoting collaboration. Group activities are only available in a **limited time window** and can only be solved **once**. Points are awarded for answering questions correctly.
 
-For larger courses or when students may not know their peers, KlickerUZH offers a randomized group creation feature. Students can opt to be randomly assigned to a group by selecting this option during the group formation process. The system automatically creates new groups each day, finalizing the process at the group creation deadline set by the lecturer. This ensures fair and efficient group formation, especially useful in courses with many participants. The lecturer determines the preferred group size, and KlickerUZH strives to adhere to this size as much as possible when creating random groups. Students who find themselves alone in a group or remain unassigned at the deadline are automatically redistributed to ensure balanced group sizes.
+For larger courses or when students may not know their peers, KlickerUZH offers a **randomized group creation** feature. Students can opt to be **randomly assigned** to a group by selecting this option during the group formation process. The system automatically creates new groups **each day**, finalizing the process at the **group creation deadline** set by the lecturer. This ensures **fair** and **efficient** group formation, especially useful in courses with many participants. The lecturer determines the **preferred group size**, and KlickerUZH strives to adhere to this size as much as possible when creating random groups. Students who find themselves alone in a group or remain unassigned at the deadline are **automatically redistributed** to ensure balanced group sizes.
 
 ![Group Activity in Mobile View](/img_v3/10_group_overview.png)
 
@@ -30,14 +30,14 @@ For larger courses or when students may not know their peers, KlickerUZH offers 
   title="KlickerUZH v3.1 - Group Activities: Student View"
 ></iframe>
 
-Once a group activity is published, students can access it from the course overview shown above. After the group activity and given that the group formation has been finalized, the students can "start" the group activity. Through this, the available hints will automatically be distributed between all group members. The students can then solve the questions together and submit their answers. The group activity will be automatically closed at the specified end date. After this date, participants will no longer be able to submit their answers.
+Once a group activity is **published**, students can access it from the course overview shown above. After the group activity and given that the group formation has been **finalized**, the students can "**start**" the group activity. Through this, the available **hints** will automatically be distributed between all group members. The students can then **solve the questions together** and **submit** their answers. The group activity will be automatically **closed** at the specified end date. After this date, participants will no longer be able to submit their answers.
 
-Please note that each group can only submit their answers once. After a successful submission, all group members will be able to see the submitted answers and grading decisions (once available) through their own account.
+Please note that each group can only submit their answers **once**. After a successful submission, all group members will be able to see the **submitted answers** and **grading decisions** (once available) through their own account.
 
 ![Group Activity Student View](/img_v3/15_group_activity_student_view.png)
 
 ## View Group Activity Results
 
-After the group activity has ended and the lecturer has finalized the grading process, students can view the results of the group activity. On the evaluation view, students will be able to see all hints (not only their assigned ones) and the provided feedbacks and points as shown below. Answers will automatically be categorized into correct (full points), partially correct (partial points) and incorrect (no points).
+After the group activity has **ended** and the lecturer has **finalized the grading process**, students can view the **results** of the group activity. On the evaluation view, students will be able to see **all hints** (not only their assigned ones) and the provided **feedbacks and points** as shown below. Answers will automatically be categorized into **correct** (full points), **partially correct** (partial points) and **incorrect** (no points).
 
 ![Group Activity Evaluation](/img_v3/16_group_activity_graded_students.png)
