--- a/apps/docs/docs/student_tutorials/microlearning.mdx
+++ b/apps/docs/docs/student_tutorials/microlearning.mdx
@@ -9,8 +9,8 @@ title: Microlearning
   style={{ float: 'right', marginLeft: '3rem' }}
 />
 
-Beyond the setting of live quizzes, KlickerUZH also offers a variety of asynchronous learning activities. In addition to the introduced [practice quizzes](/student_tutorials/practice_quiz), microlearnings are available. This section describes the student view of microlearnings, to create them, check out the [corresponding section](/tutorials/microlearning).
+Beyond the setting of live quizzes, KlickerUZH also offers a variety of **asynchronous learning activities**. In addition to the introduced [practice quizzes](/student_tutorials/practice_quiz), **microlearnings** are available. This section describes the student view of microlearnings, to create them, check out the [corresponding section](/tutorials/microlearning).
 
-Instead of being available indefinitely after being published, microlearnings are only available for a limited time and can only be answered once. Whenever a new microlearning is published, students who have enabled this option receive a push notification through the KlickerUZH app. Points are awarded for answering questions correctly. The points are added to the total participant score of the course.
+Instead of being available indefinitely after being published, microlearnings are only available for a **limited time** and can only be answered **once**. Whenever a new microlearning is published, students who have enabled this option receive a **push notification** through the KlickerUZH app. **Points** are awarded for answering questions correctly. The points are added to the **total participant score** of the course.
 
-Microlearnings can be used as part of an e-learning, as blended learning components or to check the retention of certain course content. Evaluation view and statistics provide important information to the lecturer.
+Microlearnings can be used as part of an **e-learning**, as **blended learning** components or to check the **retention** of certain course content. **Evaluation view** and **statistics** provide important information to the lecturer.
